# Robotique_RoverC

install/: local_setup.sh  setup.sh
install/robot/lib/robot/: trajectory  trajectory2
install/robot/share/robot/: package.sh
install/roverc/include/roverc/roverc/msg/: rgb.hpp
install/roverc/include/roverc/roverc/msg/detail/: rgb__rosidl_typesupport_fastrtps_c.h  wheel_speed__functions.c  wheel_speed__functions.h  wheel_speed__rosidl_typesupport_fastrtps_cpp.hpp  wheel_speed__struct.hpp  wheel_speed__type_support.cpp
install/roverc/share/roverc/: local_setup.sh  package.ps1  package.sh
install/roverc/share/roverc/cmake/: export_roverc__rosidl_generator_cppExport.cmake  export_roverc__rosidl_generator_pyExport-noconfig.cmake  export_roverc__rosidl_typesupport_fastrtps_cExport-noconfig.cmake
install/roverc/share/roverc/msg/: WheelSpeed.msg
install/roverc_client/lib/roverc_client/: client
install/roverc_client/share/roverc_client/: package.ps1  package.sh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/robot/lib/robot/: trajectory  trajectory2
src/install/robot/share/robot/: local_setup.sh  package.sh
src/install/roverc/share/roverc/: package.bash  package.dsv  package.sh  package.zsh
src/install/roverc/share/roverc/cmake/: export_roverc__rosidl_generator_cExport-noconfig.cmake  export_roverc__rosidl_generator_pyExport.cmake  export_roverc__rosidl_typesupport_fastrtps_cExport.cmake  export_roverc__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_roverc__rosidl_typesupport_fastrtps_cppExport.cmake  roverc__rosidl_typesupport_introspection_cExport.cmake  roverc__rosidl_typesupport_introspection_cppExport.cmake
src/install/roverc/share/roverc/msg/: RGB.json
src/install/roverc_client/share/roverc_client/: package.bash  package.dsv  package.sh  package.xml  package.zsh
src/log/: latest_build
src/robot/: CMakeLists.txt
src/robot/src/: algo_node.cpp  detecte _mur.cpp  line_servoing_dual.cpp  line_servoing_front.cpp  line_wall_follower.cpp  motor_controller.cpp  tof_servoing.cpp  trajectory.cpp  trajectory2.cpp
src/rover_client/: setup.cfg  setup.py
(+8 files in other folders)
